Bug fix: Weird buttons on Safari

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -139,6 +139,8 @@ h3 {
 }
 
 .btn {
+  /* Stop safari from messing up the buttons */
+  -webkit-appearance: none;
   padding: 10px 20px;
   border: 1px solid #000;
   border-radius: 5px;
